--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "api-farmacia",
   "version": "1.0.0",
   "description": "Projeto Final do Módulo 4 Resilia",
+  "type": "module",
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
+    "sqlite3": "^5.0.11",
     "uuid": "^8.3.2"
   }
 }
