:construction_worker: Controllers de funcionarios e create and populate terminados

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "db-init" : "node ./src/data/create-and-populate",
     "start": "nodemon server.js"
   },
   "repository": {
