--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db-init" : "node ./src/data/create-and-populate",
+    "db-init": "node ./src/data/create-and-populate",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/JoaoLucasAl/API-Farmacia#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
     "sqlite3": "^5.0.11",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
